--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.1.0
 flake8==6.0.0
 idna==3.4
 lxml==4.9.3
+mailjet-rest==1.3.4
 mccabe==0.7.0
 psycopg2-binary==2.9.6
 pycodestyle==2.10.0
@@ -11,7 +12,6 @@ pyflakes==3.0.1
 python-dotenv==1.0.0
 python-http-client==3.3.7
 requests==2.31.0
-sendgrid==6.10.0
 starkbank-ecdsa==2.2.0
 toml==0.10.2
 urllib3==2.0.3
